src/test/deca/context/valid/homemade/test/test_cast_class_mere.deca
// test valide de la règle cast

class A {

}

class B extends A{

    int x = 1;
}

{
    B b = new B();
    (A) (b);
}