src/test/deca/context/invalid/homemade/tests/test01_identifier/test01_newIdentifier_in_assign_class.deca
class A {
    void somme() {
        x = 1 + 1;
    }
}
